# mail_collector

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
